--- a/cadc-storage-adapter/build.gradle
+++ b/cadc-storage-adapter/build.gradle
@@ -20,7 +20,7 @@ description = 'OpenCADC Storage Inventory StorageAdapter API library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'org.bouncycastle:bcprov-jdk15on:[1.7,)'
+    compile 'org.bouncycastle:bcprov-jdk15on:[1.70,2.0)'
 
     compile 'org.opencadc:cadc-util:[1.2.31,)'
     compile 'org.opencadc:cadc-inventory:[0.8,)'
