--- a/minoc/src/main/webapp/service.yaml
+++ b/minoc/src/main/webapp/service.yaml
@@ -4,6 +4,8 @@ info:
   title: Storage Inventory files service (minoc)
   description: |
     This service allows authorised users to read, write, update (metadata), and delete files. Pre-authorised URLs may be constructed by trusted services by including a signed pre-auth token in the path element before the Artifact URI.
+    
+    Details on PUT transactions: https://github.com/opencadc/storage-inventory/blob/master/minoc/PutTransaction.md
 basePath: '/minoc'
 schemes:
   - https
@@ -16,13 +18,12 @@ paths:
       description: The artifact URI
       required: true
     get:
-      description: |
-        Download the file identified by parameter Artifact.uri, optionally cutting a subset of a FITS file.
+      description: Download the file identified by parameter Artifact.uri
       tags:
         - Artifact transfer
       summary: Download a file
       produces:
-        - application/octet-stream
+        - any
       responses:
         '200':
           description: Successful response.
@@ -40,11 +41,11 @@ paths:
               description: The content checksum (MD5) of the file
               type: string
             Content-Length:
-              description: The length of the file in bytes (not set if SUB used)
-              type: string
+              description: The length of the file in bytes
+              type: integer
             Last-Modified:
-              description: Timestamp when data was modified (not set if SUB used)
-              type: date
+              description: Timestamp when data was modified
+              type: string
         '401':
           description: If the client does not provide credentials and anonymous access is disallowed
         '403':
@@ -109,25 +110,24 @@ paths:
       schemes:
         - https
       consumes:
-        - application/octet-stream
+        - any
+      produces:
+        - none
       responses:
         '201':
           description: created - upload successful or transaction committed
           headers:
-            Content-MD5:
-              description: The MD5 checksum of the file
-              type: string
-            Content-Length:
-              description: The length of the file in bytes
+            Digest:
+              description: The checksum of the file
               type: string
         '202':
           description: accepted - transaction started
           headers:
-            X-Put-Txn:
+            x-put-txn-id:
               description: transactionID
               type: string
-            Content-Length:
-              description: The length of the file in bytes
+            Digest:
+              description: The checksum of the (current) stored bytes
               type: string
         '401':
           description: If the client does not provide credentials and anonymous access is disallowed
@@ -150,14 +150,24 @@ paths:
           required: false
         - name: Content-Length
           in: header
-          type: string
+          type: integer
           description: The number of bytes to be uploaded
           required: false
-        - name: X-Put-Txn
+        - name: x-put-txn-op
           in: header
           type: string
           description: |
-            "true" to start a new transaction; a transactionID to append to an existing transaction
+            one of: start, commit (commit requires x-put-txn-id)
+          required: false
+        - name: x-put-txn-id
+          in: header
+          type: string
+          description: transaction ID
+          required: false
+        - name: x-total-length
+          in: header
+          type: integer
+          description: total number of bytes in file (for put in transaction)
           required: false
     head:
       description: |
@@ -167,6 +177,8 @@ paths:
       summary: View file metadata
       schemes:
         - https
+      produces:
+        - none
       responses:
         '200':
           description: Successful response
@@ -182,11 +194,11 @@ paths:
               type: string
             Content-Length:
               description: The length of the file in bytes
-              type: string
+              type: integer
             Last-Modified:
               description: Timestamp when data was modified
-              type: date
-            X-Put-Txn:
+              type: string
+            x-put-txn-id:
               description: transactionID
               type: string
         '401':
@@ -200,7 +212,7 @@ paths:
         '503':
           description: Service busy
       parameters:
-        - name: X-Put-Txn
+        - name: x-put-txn-id
           in: header
           type: string
           description: transactionID to check state of an existing transaction
@@ -226,12 +238,6 @@ paths:
           description: Internal error
         '503':
           description: Service busy
-      parameters:
-        - name: X-Put-Txn
-          in: header
-          type: string
-          description: transactionID to abort
-          required: false
     post:
       description: |
         Set the metadata values for an file
@@ -244,187 +250,41 @@ paths:
         - name: contentType
           in: query
           type: string
-          description: The new content type of the file
+          description: The new content type of the file (ignored with x-put-txn-id)
           required: false
         - name: contentEncoding
           in: query
           type: string
-          description: The new content encoding of the file
+          description: The new content encoding of the file (ignored with x-put-txn-id)
+          required: false
+        - name: x-put-txn-id
+          in: header
+          type: string
+          description: transactionID
+          required: false
+        - name: x-put-txn-op
+          in: header
+          type: string
+          description: one of abort, revert (requires x-put-txn-id)
           required: false
       responses:
-        '200':
-          description: Successful response
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '404':
-          description: If the artifact could not be found.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-  '/files/{auth-token}/{artifact-uri}':
-    parameters:
-    - name: auth-token
-      in: path
-      type: string
-      description: An authorization token
-      required: true
-    - name: artifact-uri
-      in: path
-      type: string
-      description: The artifact URI
-      required: true
-    get:
-      description: |
-        Download the file identified by parameter artifact-uri.
-      tags:
-        - Artifact transfer
-      summary: Download a file
-      produces:
-        - application/octet-stream
-      responses:
-        '200':
-          description: Successful response.
+        '202':
+          description: Accepted (successful metadata update or x-put-txn-op=revert)
           headers:
-            Content-Disposition:
-              description: 'The content-disposition with suggested filename (normally last path element in artifact URI)'
-              type: string
-            Content-Type:
-              description: The content type of the file
-              type: string
             Digest:
               description: The content checksum (MD5) of the file
               type: string
-            Content-Encoding:
-              description: The content encoding of the file
+            x-put-txn-id:
+              description: transactionID
               type: string
+        '204':
+          description: No Content (successful x-put-txn-op=abort)
         '401':
           description: If the client does not provide credentials and anonymous access is disallowed.
         '403':
           description: If the client does not have permission.
         '404':
           description: If the artifact could not be found.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-      parameters:
-        - name: SUB
-          in: query
-          description: 'Sub-region of a FITS file image.  Multiple SUB parameters are allowed and will generate MEF output in file order. Examples: entire extensions (SUB=[1]&SUB=[SCI,2]), or more general purpose (SUB=[SCI,3][400:500]).'
-          required: false
-          type: string
-          collectionFormat: multi
-        - name: POS
-          in: query
-          description: The positional regions to be extracted from the data.
-          required: false
-          type: string
-        - name: CIRCLE
-          in: query
-          description: The spatial region using the CIRCLE xtype defined in DALI.
-          required: false
-          type: string
-        - name: POLYGON
-          in: query
-          description: The spatial region using the POLYGON xtype defined in DALI.
-          required: false
-          type: string
-        - name: BAND
-          in: query
-          description: The wavelength interval(s) using the INTERVAL xtype defined in DALI.
-          required: false
-          type: string
-        - name: TIME
-          in: query
-          description: The time interval(s) using the INTERVAL xtype defined in DALI.
-          required: false
-          type: string
-        - name: POL
-          in: query
-          type: array
-          collectionFormat: multi
-          items:
-            type: string
-          description: The polarization state(s) (Stokes), supports multiple values.
-          required: false
-        - name: META
-          in: query
-          description: 'extract metadata (headers) from a file. A single parameter META=true is supported for FITS files. Output will be a plain text rendition of the headers.'
-          required: false
-          type: boolean
-    put:
-      description: |
-        Upload a file identified by parameter artifact-uri.
-      tags:
-        - Artifact transfer
-      summary: Upload a file
-      schemes:
-        - https
-      consumes:
-        - application/octet-stream
-      responses:
-        '201':
-          description: Successful response
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-      parameters:
-        - name: Content-Type
-          in: header
-          type: string
-          description: The content type of the file
-          required: false
-        - name: Digest
-          in: header
-          type: string
-          description: The content checksum (MD5) of the file
-          required: false
-        - name: Content-Length
-          in: header
-          type: string
-          description: The content length of the file
-          required: false
-    head:
-      description: |
-        Get the metadata for the file identified by parameter artifact-uri.
-      tags:
-        - Artifact management
-      summary: View file metadata
-      schemes:
-        - https
-      responses:
-        '200':
-          description: Successful response
-          headers:
-            Content-Disposition:
-              description: 'The content-disposition with suggested filename (normally last path element in artifact URI)'
-              type: string
-            Content-Type:
-              description: The content type of the file
-              type: string
-            Digest:
-              description: The content checksum (MD5) of the artifact
-              type: string
-            Content-Length:
-              description: The length of the file in bytes
-              type: string
-            Last-Modified:
-              description: Timestamp when data was modified
-              type: date
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed
-        '403':
-          description: If the client does not have permission
-        '404':
-          description: If the artifact could not be found
         '500':
           description: Internal error
         '503':
