luskan: adapt to cadc-vosi API change; re-org packages

--- a/luskan/src/main/resources/PluginFactory.properties
+++ b/luskan/src/main/resources/PluginFactory.properties
@@ -5,8 +5,8 @@
 
 # configure supported values of LANG parameter and the TapQuery implementation
 ca.nrc.cadc.tap.TapQuery.langValues = ADQL ADQL-2.0
-ADQL =     org.opencadc.luskan.AdqlQueryImpl
-ADQL-2.0 = org.opencadc.luskan.AdqlQueryImpl
+ADQL =     org.opencadc.luskan.tap.AdqlQueryImpl
+ADQL-2.0 = org.opencadc.luskan.tap.AdqlQueryImpl
 
 # ca.nrc.cadc.tap.MaxRecValidator =
 
@@ -20,6 +20,6 @@ ca.nrc.cadc.tap.db.DatabaseDataType=ca.nrc.cadc.tap.pg.PostgresDataTypeMapper
 
 ca.nrc.cadc.tap.ResultStore = org.opencadc.luskan.TempStorageManager
 
-ca.nrc.cadc.tap.schema.TapSchemaDAO = org.opencadc.luskan.TapSchemaDAOImpl
+ca.nrc.cadc.tap.schema.TapSchemaDAO = org.opencadc.luskan.tap.TapSchemaDAOImpl
 
 #ca.nrc.cadc.vosi.actions.DataSourceProvider =
