--- a/luskan/src/main/webapp/WEB-INF/web.xml
+++ b/luskan/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,7 @@
         
         <init-param>
             <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
-            <param-value>org.opencadc.luskan.ws.QueryJobManager</param-value>
+            <param-value>org.opencadc.luskan.QueryJobManager</param-value>
         </init-param>
         <init-param>
             <param-name>ca.nrc.cadc.rest.InlineContentHandler</param-name>
@@ -81,7 +81,7 @@
 
         <init-param>
             <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
-            <param-value>org.opencadc.luskan.ws.QueryJobManager</param-value>
+            <param-value>org.opencadc.luskan.QueryJobManager</param-value>
         </init-param>
         <init-param>
             <param-name>ca.nrc.cadc.rest.InlineContentHandler</param-name>
@@ -138,7 +138,7 @@
         <description>
         </description>
             <param-name>ca.nrc.cadc.vosi.AvailabilityPlugin</param-name>
-            <param-value>org.opencadc.luskan.ws.StorageTapService</param-value>
+            <param-value>org.opencadc.luskan.ServiceAvailability</param-value>
         </init-param>
         <load-on-startup>3</load-on-startup>
     </servlet>
