--- a/fenwick/build.gradle
+++ b/fenwick/build.gradle
@@ -17,6 +17,7 @@ group = 'org.opencadc'
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-util:[1.3.21,2.0)'
+    compile 'org.opencadc:cadc-inventory:[0.8.7,1.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.13,1.0)'
     compile 'org.opencadc:cadc-inventory-util:[0.1.5,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
