--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -26,7 +26,7 @@ war {
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
-    compile 'org.opencadc:cadc-vosi:[1.4.1,)'
+    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-rest:[1.0,2.0)'
 
     runtime 'org.opencadc:cadc-log:[1.1,)'
@@ -34,5 +34,5 @@ dependencies {
 
     testCompile 'junit:junit:[4.0,)'
 
-    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0,)'
+    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
 }
