reduce sleep time when queries work but streaming fails stop using deprecated TapClient method fix unchecked cast warnings

--- a/fenwick/Dockerfile
+++ b/fenwick/Dockerfile
@@ -1,8 +1,5 @@
 FROM cadc-java:1
 
-COPY build/distributions/fenwick.tar /
-
-RUN tar xvf fenwick.tar \
-    && rm -rf fenwick.tar
+ADD build/distributions/fenwick.tar /
 
 CMD ["/fenwick/bin/fenwick"]
