--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -24,7 +24,7 @@ war {
 }
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-rest:[1.0,2.0)'
