--- a/cadc-inventory-server/build.gradle
+++ b/cadc-inventory-server/build.gradle
@@ -12,16 +12,15 @@ repositories {
 
 sourceCompatibility = 1.8
 group = 'org.opencadc'
-version = '0.1.3'
+version = '0.1.4'
 
 description = 'OpenCADC Storage Inventory server utility library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.9,)'
-    compile 'org.opencadc:cadc-util:[1.2,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-rest:[1.3.4,)'
     compile 'org.opencadc:cadc-cdp:[1.3,2.0)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
