--- a/cadc-inventory-util/build.gradle
+++ b/cadc-inventory-util/build.gradle
@@ -16,16 +16,15 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.1.6'
+version = '0.1.7'
 
 description = 'OpenCADC Storage Inventory client utility library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
     compile 'org.apache.commons:commons-dbcp2:[2.8.0,2.9.0)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
-    compile 'org.opencadc:cadc-util:[1.2,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-tap:[1.0.1,1.2)'
     
     testCompile 'junit:junit:[4.0,)'
