--- a/cadc-inventory/build.gradle
+++ b/cadc-inventory/build.gradle
@@ -14,14 +14,13 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.8.7'
+version = '0.8.8'
 
 description = 'OpenCADC Storage Inventory core library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.2,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
 }
