--- a/cadc-storage-adapter-ad/build.gradle
+++ b/cadc-storage-adapter-ad/build.gradle
@@ -14,14 +14,13 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.5.0'
+version = '0.5.1'
 
 description = 'OpenCADC Storage Inventory AdStorageAdapter implementation'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.3.10,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-cdp:[1.3,2.0)'
     compile 'org.opencadc:cadc-dali:[1.2.1,)'
     compile 'org.opencadc:cadc-tap:[1.0.1,)'
