--- a/cadc-storage-adapter-fs/build.gradle
+++ b/cadc-storage-adapter-fs/build.gradle
@@ -16,14 +16,13 @@ apply from: '../opencadc.gradle'
 
 group = 'org.opencadc'
 
-version = '0.8.1'
+version = '0.8.2'
 
 description = 'OpenCADC Storage Inventory FileSystem StorageAdapter implementation'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.3.10,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-inventory:[0.7,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.9,)'
 
