--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -23,11 +23,10 @@ war {
 }
 
 dependencies {
-    compile 'log4j:log4j:[1.2.0,)'
     providedCompile 'javax.servlet:javax.servlet-api:[3.1.0,)'
     compile 'org.jdom:jdom2:[2.0,)'
 
-    compile 'org.opencadc:cadc-util:[1.5.6,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-adql:[1.1,)'
     compile 'org.opencadc:cadc-uws:[1.0.3,)'
