--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -23,8 +23,7 @@ war {
 }
 
 dependencies {
-    compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.5.3,)'
+    compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-log:[1.0,)'
     compile 'org.opencadc:cadc-registry:[1.5.9,)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
