Re-work after code review

--- a/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
+++ b/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
@@ -4,6 +4,7 @@ org.opencadc.raven.inventory.schema=inventory
 
 org.opencadc.raven.publicKeyFile=raven-pub.key
 org.opencadc.raven.privateKeyFile=raven-priv.key
+org.opencadc.raven.consistency.preventNotFound=true
 
 # invalid storage site rules
 
