--- a/raven/src/test/resources/testValidConfig/raven.properties
+++ b/raven/src/test/resources/testValidConfig/raven.properties
@@ -5,6 +5,8 @@ org.opencadc.raven.inventory.schema=inventory
 org.opencadc.raven.publicKeyFile=raven-pub.key
 org.opencadc.raven.privateKeyFile=raven-priv.key
 
+org.opencadc.raven.consistency.preventNotFound=true
+
 org.opencadc.raven.readGrantProvider=ivo://cadc.nrc.ca/baldur
 org.opencadc.raven.writeGrantProvider=ivo://cadc.nrc.ca/baldur
 
