update dependencies for database structure change simplify docker build for applications (ADD tar to image) fix some tyantar tests that broke with log4j2

--- a/critwall/Dockerfile
+++ b/critwall/Dockerfile
@@ -1,8 +1,5 @@
 FROM cadc-java:1
 
-COPY build/distributions/critwall.tar /
-
-RUN tar xvf critwall.tar \
-    && rm -f critwall.tar
+ADD build/distributions/critwall.tar /
 
 CMD ["/critwall/bin/critwall"]
