--- a/ratik/Dockerfile
+++ b/ratik/Dockerfile
@@ -1,8 +1,5 @@
 FROM cadc-java:1
 
-COPY build/distributions/ratik.tar /
-
-RUN tar xvf ratik.tar \
-    && rm -rf ratik.tar
+ADD build/distributions/ratik.tar /
 
 CMD ["/ratik/bin/ratik"]
