--- a/ringhold/Dockerfile
+++ b/ringhold/Dockerfile
@@ -1,8 +1,5 @@
 FROM cadc-java:1
 
-COPY build/distributions/ringhold.tar /
-
-RUN tar xvf ringhold.tar \
-    && rm -rf ringhold.tar
+ADD build/distributions/ringhold.tar /
 
 CMD ["/ringhold/bin/ringhold"]
