--- a/tantar/Dockerfile
+++ b/tantar/Dockerfile
@@ -1,8 +1,5 @@
 FROM cadc-java:1
 
-COPY build/distributions/tantar.tar /
-
-RUN tar xvf tantar.tar \
-    && rm -rf tantar.tar
+ADD build/distributions/tantar.tar /
 
 CMD ["/tantar/bin/tantar"]
