--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     compile 'org.opencadc:cadc-cdp:[1.0,)'
     compile 'org.opencadc:cadc-data-ops-fits:[0.2.4,)'
     compile 'org.opencadc:cadc-gms:[1.0.0,)'
-    compile 'org.opencadc:cadc-inventory:[0.8.5,)'
-    compile 'org.opencadc:cadc-inventory-db:[0.13.0,1.0)'
+    compile 'org.opencadc:cadc-inventory:[0.9,2.0)'
+    compile 'org.opencadc:cadc-inventory-db:[0.14,1.0)'
     compile 'org.opencadc:cadc-inventory-server:[0.1.2,)'
     compile 'org.opencadc:cadc-soda-server:[1.2.0,2.0.0)'
     compile 'org.opencadc:cadc-storage-adapter:[0.9,)'
@@ -52,6 +52,14 @@ dependencies {
     runtime 'org.opencadc:cadc-storage-adapter-fs:[0.8,)'
     runtime 'org.opencadc:cadc-storage-adapter-ad:[0.5,)'
     runtime 'org.opencadc:cadc-storage-adapter-swift:[0.7,)'
+
+    // work around because 1.8.0-beta4 prints exceptions in log, eg:
+    // java.lang.NoSuchFieldException: mdc
+    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
+    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
+    runtime 'org.slf4j:slf4j-api:1.7.36'
+    runtime 'org.slf4j:jcl-over-slf4j:1.7.36'
+    runtime 'org.slf4j:slf4j-log4j12:1.7.36'
 }
 
 
