--- a/tantar/build.gradle
+++ b/tantar/build.gradle
@@ -15,10 +15,11 @@ sourceCompatibility = 1.8
 group = 'org.opencadc'
 
 dependencies {
-    compile 'org.opencadc:cadc-inventory-db:[0.13,1.0)'
-    compile 'org.opencadc:cadc-log:[1.1.2,2.0)'
     compile 'org.opencadc:cadc-util:[1.6,2.0)'
-    compile 'org.opencadc:cadc-inventory-util:[0.1.0,1.0)'
+    compile 'org.opencadc:cadc-log:[1.1.2,2.0)'
+    compile 'org.opencadc:cadc-inventory:[0.9,2.0)'
+    compile 'org.opencadc:cadc-inventory-db:[0.14,1.0)'
+    compile 'org.opencadc:cadc-inventory-util:[0.1.8,1.0)'
     compile 'org.opencadc:cadc-storage-adapter:[0.8,1.0)'
 
     runtime 'org.opencadc:cadc-storage-adapter-fs:[0.7,)'
