--- a/tantar/build.gradle
+++ b/tantar/build.gradle
@@ -14,6 +14,8 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
+mainClassName = 'org.opencadc.tantar.Main'
+
 dependencies {
     compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-log:[1.1.2,2.0)'
@@ -27,9 +29,19 @@ dependencies {
     runtime 'org.opencadc:cadc-storage-adapter-swift:[0.6,)'
 
     testCompile 'junit:junit:[4.12,5.0)'
+    
+    // work around because 1.8.0-beta4 prints exceptions in log, eg:
+    // java.lang.NoSuchFieldException: mdc
+    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
+    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
+    runtime 'org.slf4j:slf4j-api:1.7.36'
+    runtime 'org.slf4j:jcl-over-slf4j:1.7.36'
+    runtime 'org.slf4j:slf4j-log4j12:1.7.36'
 }
 
-mainClassName = 'org.opencadc.tantar.Main'
+configurations {
+  runtime.exclude group: 'org.slf4j', module: 'slf4j-reload4j'
+}
 
 apply from: '../opencadc.gradle'
 
