--- a/raven/src/test/resources/testValidConfig/raven.properties
+++ b/raven/src/test/resources/testValidConfig/raven.properties
@@ -24,3 +24,6 @@ org.opencadc.raven.putPreference=@SITE3
 @SITE3.resourceID=ivo://negotiation-test-site3
 @SITE3.namespace=foo:BAR/
 @SITE3.namespace=cadc:TEST/
+
+org.opencadc.raven.storageResolver.entry=mast ca.nrc.cadc.caom2.artifact.resolvers.MastResolver
+org.opencadc.raven.storageResolver.entry=gemini ca.nrc.cadc.caom2.artifact.resolvers.GeminiResolver
