Rework after code review

--- a/raven/src/test/resources/testValidConfig/raven.properties
+++ b/raven/src/test/resources/testValidConfig/raven.properties
@@ -25,5 +25,4 @@ org.opencadc.raven.putPreference=@SITE3
 @SITE3.namespace=foo:BAR/
 @SITE3.namespace=cadc:TEST/
 
-org.opencadc.raven.storageResolver.entry=mast ca.nrc.cadc.caom2.artifact.resolvers.MastResolver
-org.opencadc.raven.storageResolver.entry=gemini ca.nrc.cadc.caom2.artifact.resolvers.GeminiResolver
+ca.nrc.cadc.net.StorageResolver=mast ca.nrc.cadc.caom2.artifact.resolvers.MastResolver
