--- a/critwall/build.gradle
+++ b/critwall/build.gradle
@@ -33,4 +33,16 @@ dependencies {
     
     testCompile 'junit:junit:[4.12,5.0)'
     intTestCompile 'org.opencadc:cadc-storage-adapter-fs:[0.7,)'
+    
+    // work around because 1.8.0-beta4 prints exceptions in log, eg:
+    // java.lang.NoSuchFieldException: mdc
+    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
+    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
+    runtime 'org.slf4j:slf4j-api:1.7.36'
+    runtime 'org.slf4j:jcl-over-slf4j:1.7.36'
+    runtime 'org.slf4j:slf4j-log4j12:1.7.36'
+}
+
+configurations {
+  runtime.exclude group: 'org.slf4j', module: 'slf4j-reload4j'
 }
