minoc: set content-length-0 after POST pinned to older versions of fits ops to keep striding test working

--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'org.opencadc:cadc-gms:[1.0,)'
     
     compile 'org.opencadc:nom-tam-fits:1.16.4'
+    compile 'org.opencadc:cadc-data-ops-fits:0.2.5'
 
     testCompile 'junit:junit:[4.0,)'
     testCompile 'org.opencadc:cadc-storage-adapter-fs:[0.8.3,)'
