--- a/cadc-storage-adapter-swift/build.gradle
+++ b/cadc-storage-adapter-swift/build.gradle
@@ -14,7 +14,7 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.7.2'
+version = '0.8.0'
 
 apply from: '../opencadc.gradle'
 
@@ -25,7 +25,7 @@ dependencies {
     compile 'org.apache.commons:commons-pool2:[2.9,3.0)'
     compile 'org.opencadc:cadc-util:[1.6,2.0)'
     compile 'org.opencadc:cadc-inventory:[0.7,)'
-    compile 'org.opencadc:cadc-storage-adapter:[0.9,)'
+    compile 'org.opencadc:cadc-storage-adapter:[0.10,)'
 
     // swift API
     compile 'org.opencadc:joss:0.10.4-pdowler1'
@@ -38,10 +38,19 @@ dependencies {
     testCompile 'junit:junit:[4.0,)'
     
     intTestCompile 'org.opencadc:cadc-storage-adapter-test:[0.4,)'
+
+    // work around because 1.8.0-beta4 prints exceptions in log, eg:
+    // java.lang.NoSuchFieldException: mdc
+    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
+    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
+    runtime 'org.slf4j:slf4j-api:1.7.36'
+    runtime 'org.slf4j:jcl-over-slf4j:1.7.36'
+    runtime 'org.slf4j:slf4j-log4j12:1.7.36'
 }
 
 configurations {
   // slf4j work around to exclude log4j-1.x and use backwards compat api
   runtime.exclude group: 'log4j'
+  runtime.exclude group: 'org.slf4j', module: 'slf4j-reload4j'
 }
 
