luskan, minoc, raven: fix issue #392

--- a/minoc/src/main/webapp/WEB-INF/web.xml
+++ b/minoc/src/main/webapp/WEB-INF/web.xml
@@ -28,12 +28,8 @@
       </param-value>
     </init-param>
     <init-param>
-      <param-name>logAccessGroup</param-name>
-      <param-value>ivo://cadc.nrc.ca/gms?CADC</param-value>
-    </init-param>
-    <init-param>
-      <param-name>groupAuthorizer</param-name>
-      <param-value>ca.nrc.cadc.ac.client.GroupAuthorizer</param-value>
+        <param-name>logControlProperties</param-name>
+        <param-value>minoc-logControl.properties</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
