--- a/luskan/src/main/webapp/WEB-INF/web.xml
+++ b/luskan/src/main/webapp/WEB-INF/web.xml
@@ -29,13 +29,9 @@
       </param-value>
     </init-param>
     <init-param>
-            <param-name>logAccessGroup</param-name>
-            <param-value>ivo://cadc.nrc.ca/gms?CADC</param-value>
-        </init-param>
-        <init-param>
-            <param-name>groupAuthorizer</param-name>
-            <param-value>ca.nrc.cadc.ac.client.GroupAuthorizer</param-value>
-        </init-param>
+        <param-name>logControlProperties</param-name>
+        <param-value>luskan-logControl.properties</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
