--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -24,7 +24,7 @@ war {
 
 dependencies {
     compile 'org.opencadc:cadc-util:[1.6.6,2.0)'
-    compile 'org.opencadc:cadc-log:[1.0,)'
+    compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
     compile 'org.opencadc:cadc-registry:[1.5.9,)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-rest:[1.3.10,)'
