luskan: switch to using cadc-tap-tmp

--- a/luskan/src/main/resources/PluginFactory.properties
+++ b/luskan/src/main/resources/PluginFactory.properties
@@ -12,13 +12,17 @@ ADQL-2.0 = org.opencadc.luskan.tap.AdqlQueryImpl
 
 ca.nrc.cadc.tap.db.DatabaseDataType=ca.nrc.cadc.tap.pg.PostgresDataTypeMapper
 
-#ca.nrc.cadc.tap.UploadManager =
+## tap upload not supported
+#ca.nrc.cadc.tap.UploadManager = ca.nrc.cadc.tap.DefaultUploadManager
 
 #ca.nrc.cadc.tap.TableWriter = ca.nrc.cadc.tap.DefaultTableWriter
 
 #ca.nrc.cadc.tap.writer.format.FormatFactory =
 
-ca.nrc.cadc.tap.ResultStore = org.opencadc.luskan.TempStorageManager
+## currently need to pick this at compile
+## TODO: modify cadc-tap-server to find this config file at runtime
+ca.nrc.cadc.tap.ResultStore = org.opencadc.tap.tmp.TempStorageManager
+#ca.nrc.cadc.tap.ResultStore = org.opencadc.tap.tmp.HttpStorageManager
 
 ca.nrc.cadc.tap.schema.TapSchemaDAO = org.opencadc.luskan.tap.TapSchemaDAOImpl
 
