luskan, minoc, raven: add version info to server header

--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -20,6 +20,9 @@ war {
     from(System.getenv('RPS') + '/resources/') {
         include 'swagger-ui/'
     }
+    from('.') { 
+        include 'VERSION'
+    }
 }
 
 dependencies {
