--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -25,40 +25,20 @@
           ca.nrc.cadc.vosi
       </param-value>
     </init-param>
-<!--    <init-param>-->
-<!--        <param-name>logControlProperties</param-name>-->
-<!--        <param-value>vault-logControl.properties</param-value>-->
-<!--    </init-param>-->
+    <init-param>
+        <param-name>logControlProperties</param-name>
+        <param-value>vault-logControl.properties</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet>
     <servlet-name>NodesServlet</servlet-name>
         <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
-<!--        <init-param>-->
-<!--            <param-name>augmentSubject</param-name>-->
-<!--            <param-value>false</param-value>-->
-<!--        </init-param>-->
         <init-param>
             <param-name>init</param-name>
             <param-value>org.opencadc.vault.VaultInitAction</param-value>
         </init-param>
-<!--        <init-param>-->
-<!--            <param-name>get</param-name>-->
-<!--            <param-value>org.opencadc.vault.GetAction</param-value>-->
-<!--        </init-param>-->
-<!--        <init-param>-->
-<!--            <param-name>put</param-name>-->
-<!--            <param-value>org.opencadc.vault.PutAction</param-value>-->
-<!--        </init-param>-->
-<!--        <init-param>-->
-<!--            <param-name>post</param-name>-->
-<!--            <param-value>org.opencadc.vault.PostAction</param-value>-->
-<!--        </init-param>-->
-<!--        <init-param>-->
-<!--            <param-name>delete</param-name>-->
-<!--            <param-value>org.opencadc.vault.DeleteAction</param-value>-->
-<!--        </init-param>-->
         <load-on-startup>2</load-on-startup>
     </servlet>
 
@@ -93,10 +73,10 @@
             <param-name>ca.nrc.cadc.vosi.AvailabilityPlugin</param-name>
             <param-value>org.opencadc.vault.ServiceAvailability</param-value>
         </init-param>
-<!--        <init-param>-->
-<!--            <param-name>availabilityProperties</param-name>-->
-<!--            <param-value>vault-availability.properties</param-value>-->
-<!--        </init-param>-->
+        <init-param>
+            <param-name>availabilityProperties</param-name>
+            <param-value>vault-availability.properties</param-value>
+        </init-param>
         <load-on-startup>4</load-on-startup>
     </servlet>
 
@@ -124,9 +104,5 @@
     <servlet-name>logControl</servlet-name>
     <url-pattern>/logControl</url-pattern>
   </servlet-mapping>
-
-<!--  <welcome-file-list>-->
-<!--    <welcome-file>index.html</welcome-file>-->
-<!--  </welcome-file-list>-->
 
 </web-app>
