CADC-11463 code review rework, replace vospace with nodes in properties

--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -33,18 +33,8 @@ dependencies {
     testCompile 'junit:junit:[4.0,)'
 
     intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
-
-    runtime 'org.postgresql:postgresql:[42.2.8,)'
-
-    // work around because 1.8.0-beta4 prints exceptions in log, eg:
-    // java.lang.NoSuchFieldException: mdc
-    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
-    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
-    runtime 'org.slf4j:slf4j-api:1.7.36'
-    runtime 'org.slf4j:jcl-over-slf4j:1.7.36'
-    runtime 'org.slf4j:slf4j-log4j12:1.7.36'
 }
 
 configurations {
-  runtime.exclude group: 'org.slf4j', module: 'slf4j-reload4j'
+    runtime.exclude group: 'org.postgresql:postgresql'
 }
