--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -24,13 +24,15 @@ war {
 }
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.6,2.0)'
+    compile 'org.opencadc:cadc-util:[1.9,2.0)'
+    compile 'org.opencadc:cadc-gms:[1.0,2.0)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
+    // there is no cadc-permisssions-server lib because it's too simple 
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-rest:[1.0,2.0)'
 
     runtime 'org.opencadc:cadc-log:[1.1,)'
-    runtime 'org.opencadc:cadc-access-control:[1.0,2.0)'
+    runtime 'org.opencadc:cadc-access-control-identity:[1.2,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
 
