--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:[3.1.0,)'
     compile 'org.jdom:jdom2:[2.0,)'
 
-    compile 'org.opencadc:cadc-util:[1.8.4,2.0)'
+    compile 'org.opencadc:cadc-util:[1.9.0,2.0)'
+    compile 'org.opencadc:cadc-rest:[1.3.14,2.0)'
     compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-adql:[1.1,)'
