--- a/baldur/build.gradle
+++ b/baldur/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     // there is no cadc-permisssions-server lib because it's too simple 
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
     compile 'org.opencadc:cadc-rest:[1.0,2.0)'
+    compile 'org.opencadc:cadc-registry:[1.7,2.0)'
 
     runtime 'org.opencadc:cadc-log:[1.1,)'
     runtime 'org.opencadc:cadc-access-control-identity:[1.2,2.0)'
