--- a/baldur/Dockerfile
+++ b/baldur/Dockerfile
@@ -1,4 +1,4 @@
-FROM cadc-tomcat:1
+FROM images.opencadc.org/library/cadc-tomcat:1
 
 RUN rm -rf /usr/share/tomcat/webapps/*
 COPY build/libs/baldur.war /usr/share/tomcat/webapps
