--- a/cadc-inventory-db/build.gradle
+++ b/cadc-inventory-db/build.gradle
@@ -27,6 +27,7 @@ mainClassName = 'org.opencadc.inventory.db.version.Main'
 dependencies {
     compile 'org.opencadc:cadc-util:[1.6.2,2.0)'
     compile 'org.opencadc:cadc-inventory:[0.9,)'
+    compile 'org.opencadc:cadc-vos:[2.0,3.0)'
 
     testCompile 'junit:junit:[4.0,)'
     
