minoc: wcslib provided by base image

--- a/minoc/Dockerfile
+++ b/minoc/Dockerfile
@@ -1,6 +1,6 @@
 FROM images.opencadc.org/library/cadc-tomcat:1
 
-RUN dnf install -y wcslib && dnf clean all
+# wcslib provided by base image now
 
 COPY build/libs/minoc.war /usr/share/tomcat/webapps/
 
