vault: add init database, update README with additional config

--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -26,14 +26,23 @@ war {
 }
 
 dependencies {
+    compile 'org.opencadc:cadc-util:[1.9,2.0)'
     compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
+    compile 'org.opencadc:cadc-vos:[2.0,3.0)'
+    //compile 'org.opencadc:cadc-vos-server:[2.0,3.0)'
+    compile 'org.opencadc:cadc-inventory:[0.9.4,1.0)'
+    compile 'org.opencadc:cadc-inventory-db:[0.15.0,1.0)'
 
     testCompile 'junit:junit:[4.0,)'
+
+    runtime 'org.opencadc:cadc-access-control-identity:[1.2.0,)'
+    runtime 'org.opencadc:cadc-gms:[1.0.4,)'
 
     intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
 }
 
 configurations {
+    compile.exclude group: 'org.restlet.jee'
     runtime.exclude group: 'org.postgresql:postgresql'
 }
