--- a/critwall/build.gradle
+++ b/critwall/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     compile 'org.opencadc:cadc-storage-adapter:[0.8,1.0)'
     compile 'org.opencadc:cadc-util:[1.9.6,2.0)'
     compile 'org.opencadc:cadc-inventory:[0.9.4,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[0.14.5,1.0)'
+    // cadc-inventory-db-0.15 is in the vos2 feature branch
+    compile 'org.opencadc:cadc-inventory-db:[0.14.5,0.15.0)'
     compile 'org.opencadc:cadc-registry:[1.7,2.0)'
     compile 'org.opencadc:cadc-vosi:[1.3.6,2.0)'
     compile 'org.opencadc:cadc-vos:[1.2,2.0)'
