--- a/vault/Dockerfile
+++ b/vault/Dockerfile
@@ -1,3 +1,4 @@
-FROM cadc-tomcat:1
+FROM images.opencadc.org/library/cadc-tomcat:1
 
-COPY build/libs/vault.war /usr/share/tomcat/webapps/
+COPY build/libs/vault.war /usr/share/tomcat/webapps/vault.war
+
