--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -24,21 +24,36 @@ war {
         include 'VERSION'
     }
 }
+description = 'OpenCADC VOSpace server'
+def git_url = 'https://github.com/opencadc/vos'
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.9,2.0)'
-    compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
-    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
-    compile 'org.opencadc:cadc-vos:[2.0,3.0)'
-    //compile 'org.opencadc:cadc-vos-server:[2.0,3.0)'
+    compile 'javax.servlet:javax.servlet-api:[3.1,4.0)'
+
+    compile 'org.opencadc:cadc-util:[1.9.5,2.0)'
+    compile 'org.opencadc:cadc-gms:[1.0.0,)'
+    compile 'org.opencadc:cadc-rest:[1.3.16,)'
+    compile 'org.opencadc:cadc-vos:[2.0,)'
+    compile 'org.opencadc:cadc-vos-server-2.0:[2.0,)'
+    compile 'org.opencadc:cadc-vosi:[1.3.2,)'
+    compile 'org.opencadc:cadc-uws:[1.0,)'
+    compile 'org.opencadc:cadc-uws-server:[1.2.12,)'
+    compile 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
+    compile 'org.opencadc:cadc-cdp:[1.2.3,)'
+    compile 'org.opencadc:cadc-registry:[1.5.15,)'
     compile 'org.opencadc:cadc-inventory:[0.9.4,1.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.15.0,1.0)'
 
     testCompile 'junit:junit:[4.0,)'
+    testCompile 'org.easymock:easymock:3.6'
+    testCompile 'org.skyscreamer:jsonassert:[1.0,)'
 
     runtime 'org.opencadc:cadc-access-control-identity:[1.2.0,)'
     runtime 'org.opencadc:cadc-gms:[1.0.4,)'
 
+    // JDBC drivers
+    intTestRuntime 'org.postgresql:postgresql:[42.2.8,)'
+    intTestRuntime 'net.sourceforge.jtds:jtds:[1.0,)'
     intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
 }
 
