luskan: added experimental row_counter() UDF

--- a/luskan/src/main/resources/PluginFactory.properties
+++ b/luskan/src/main/resources/PluginFactory.properties
@@ -17,7 +17,7 @@ ca.nrc.cadc.tap.db.DatabaseDataType=ca.nrc.cadc.tap.pg.PostgresDataTypeMapper
 
 #ca.nrc.cadc.tap.TableWriter = ca.nrc.cadc.tap.DefaultTableWriter
 
-#ca.nrc.cadc.tap.writer.format.FormatFactory =
+ca.nrc.cadc.tap.writer.format.FormatFactory = org.opencadc.luskan.tap.FormatFactoryImpl
 
 ## currently need to pick this at compile
 ## TODO: modify cadc-tap-server to find this config file at runtime
