--- a/raven/build.gradle
+++ b/raven/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'org.opencadc:cadc-inventory-db:[0.14.5,1.0)'
     compile 'org.opencadc:cadc-inventory-server:[0.2.1,)'
     compile 'org.opencadc:cadc-permissions:[0.3.1,)'
+    compile 'org.opencadc:cadc-permissions-client:[0.3,)'
     compile 'org.opencadc:cadc-vos:[1.2,2.0)'
 
     runtime 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
