--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <servlet-class>ca.nrc.cadc.log.LogControlServlet</servlet-class>
     <init-param>
       <param-name>logLevel</param-name>
-      <param-value>debug</param-value>
+      <param-value>info</param-value>
     </init-param>
     <init-param>
       <param-name>logLevelPackages</param-name>
@@ -20,9 +20,7 @@
           org.opencadc.vault
           ca.nrc.cadc.db
           org.opencadc.vospace
-          <!--ca.nrc.cadc.rest
-          ca.nrc.cadc.ac
-          ca.nrc.cadc.auth -->
+          ca.nrc.cadc.rest
           ca.nrc.cadc.util
           ca.nrc.cadc.vosi
       </param-value>
