--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <servlet-class>ca.nrc.cadc.log.LogControlServlet</servlet-class>
     <init-param>
       <param-name>logLevel</param-name>
-      <param-value>info</param-value>
+      <param-value>debug</param-value>
     </init-param>
     <init-param>
       <param-name>logLevelPackages</param-name>
@@ -45,19 +45,19 @@
     </init-param>
     <init-param>
       <param-name>get</param-name>
-      <param-value>org.opencadc.vospace.server.web.actions.GetNodeAction</param-value>
+      <param-value>org.opencadc.vospace.server.actions.GetNodeAction</param-value>
     </init-param>
     <init-param>
       <param-name>put</param-name>
-      <param-value>org.opencadc.vospace.server.web.actions.CreateNodeAction</param-value>
+      <param-value>org.opencadc.vospace.server.actions.CreateNodeAction</param-value>
     </init-param>
     <init-param>
       <param-name>post</param-name>
-      <param-value>org.opencadc.vospace.server.web.actions.UpdateNodeAction</param-value>
+      <param-value>org.opencadc.vospace.server.actions.UpdateNodeAction</param-value>
     </init-param>
     <init-param>
       <param-name>delete</param-name>
-      <param-value>org.opencadc.vospace.server.web.actions.DeleteNodeAction</param-value>
+      <param-value>org.opencadc.vospace.server.actions.DeleteNodeAction</param-value>
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
