--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile 'org.opencadc:cadc-gms:[1.0.0,)'
     compile 'org.opencadc:cadc-rest:[1.3.16,)'
     compile 'org.opencadc:cadc-vos:[2.0,)'
-    compile 'org.opencadc:cadc-vos-server-2.0:[2.0,)'
+    compile 'org.opencadc:cadc-vos-server-alt:[2.0,)'
     compile 'org.opencadc:cadc-vosi:[1.3.2,)'
     compile 'org.opencadc:cadc-uws:[1.0,)'
     compile 'org.opencadc:cadc-uws-server:[1.2.12,)'
