--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     runtime 'org.opencadc:cadc-gms:[1.0.4,)'
 
     intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
+    intTestCompile 'org.opencadc:cadc-test-vos:[2.0,3.0)'
 }
 
 configurations {
