Re-work after code review

--- a/raven/src/main/webapp/WEB-INF/web.xml
+++ b/raven/src/main/webapp/WEB-INF/web.xml
@@ -119,7 +119,7 @@
 
   <servlet-mapping>
     <servlet-name>PubKeyServlet</servlet-name>
-    <url-pattern>/pubkey/*</url-pattern>
+    <url-pattern>/pubkey</url-pattern>
   </servlet-mapping>
   
   <!-- Availability servlet endpoint -->
