raven: add an admin pool that can init the inventory db and store preauth keys

--- a/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
+++ b/raven/src/test/resources/testInvalidStorageSiteRules/raven.properties
@@ -1,10 +1,8 @@
 # valid config
 
 org.opencadc.raven.inventory.schema=inventory
-
-org.opencadc.raven.publicKeyFile=raven-pub.key
-org.opencadc.raven.privateKeyFile=raven-priv.key
-org.opencadc.raven.consistency.preventNotFound=true
+org.opencadc.raven.consistency.preventNotFound=false
+org.opencadc.raven.keys.preauth=true
 
 # invalid storage site rules
 
